# pdf_oxide

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  LINTING.md  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  clippy.toml  deny.toml  pdm.toml  pyproject.toml  requirements-dev.txt  rustfmt.toml
.cargo/: audit.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python.yml  release.yml
benches/: README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEVELOPMENT_GUIDE.md  ML_INTEGRATION.md  PDF_CREATION_GUIDE.md  PDF_SPEC_GAPS.md  README.md  REGRESSION_TEST_SUITE.md  file_analysis.md  getting-started-python.md  getting-started-rust.md  recommendations.md
docs/design/: pypdf_feature_inventory.md  unified-api.md
docs/guides/: ADVANCED_FEATURES.md  PYTHON_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md
docs/planning/: industry-gap-analysis.md  pdfium-render-gap-analysis.md
docs/reference/: EXPORT_COMMANDS.md  FORMAT_COMPARISON_GUIDE.md  QUICK_REFERENCE_CARD.md
docs/spec/: README.md  pdf.md
examples/: README.md  analyze_font_f1.rs  check_form_tables.rs  check_gdpr.rs  check_greek.rs  compare_extraction_methods.rs  create_pdf_from_markdown.rs  create_pdf_with_images.rs  debug_arxiv_bold.rs  debug_clustering.rs  debug_corrupt_pdf.rs  debug_failing_pdf.rs  debug_magazine.rs  debug_nasa.rs  debug_page_detection.rs  debug_word_splitting.rs  debug_xobjects.rs  debug_zero_chars.rs  diagnose_character_order.rs  diagnose_endash_encoding.rs  diagnose_page12_failures.rs  diagnose_page_count.rs  diagnose_replacement_chars.rs  diagnose_replacement_chars_multi.rs  diagnose_tounicode_cmap.rs  dump_decompressed.rs  dump_objstm.rs  dump_stream_bytes.rs  edit_existing_pdf.rs  edit_text_content.rs  extract_structured.rs  extract_text_simple.rs  inspect_char_codes.rs  inspect_font_f1_dictionary.rs  inspect_fonts.rs  python_example.py  show_all_fonts_page12.rs  test_cycle_detection.rs  test_debug.rs  test_forms.rs  (+6 more)
hooks/: pre-commit  ty-check.py
models/: README.md
python/: README.md
python/pdf_oxide/: __init__.py  __init__.pyi  pdf_oxide.pyi
scripts/: README.md  analyze_pdf_layout.py  analyze_pdf_spacing.py  benchmark_all_libraries.py  benchmark_pdf_library.py  benchmark_requirements.txt  browser_download_pdfs.py  check_pdf_structure.py  cleanup_for_release.sh  collect_all.sh  compare_all_outputs.py  compare_extractors.py  compare_results.py  convert_models.py  convert_pdf_spec.py  debug_font_encoding.py  diagnose_character_order.py  download_arxiv.py  download_cfr_regulations.py  download_chronicling_america.py  download_diverse_pdfs.py  download_financial.py  download_government.py  download_govinfo_policies.py  download_internet_archive_newspapers.py  download_irs_forms.py  download_loc_gov_dataset.sh  download_oatd_theses.py  download_sec_edgar_bulk.py  download_sec_filings.py  download_who_reports.py  inspect_tj_array.py  move_large_pdfs.py  rebenchmark_pdf_library.py  requirements.txt  setup-hooks.sh  setup_benchmark_env.sh  test_adaptive_heuristics.py  test_arxiv_ligatures.py  test_phase2_results.py  (+2 more)
src/: annotation_types.rs  annotations.rs  config.rs  document.rs  error.rs  images.rs  lexer.rs  lib.rs  object.rs  objstm.rs  outline.rs  parser.rs  parser_config.rs  python.rs  wasm.rs  xref.rs  xref_reconstruction.rs
src/api/: mod.rs  pdf_builder.rs
src/compliance/: converter.rs  mod.rs  pdf_a.rs  pdf_ua.rs  types.rs  validators.rs
src/content/: graphics_state.rs  mod.rs  operators.rs  parser.rs
src/converters/: formula_renderer.rs  html.rs  markdown.rs  mod.rs  whitespace.rs
src/debug/: mod.rs  visualizer.rs
src/decoders/: ascii85.rs  ascii_hex.rs  ccitt.rs  dct.rs  flate.rs  jbig2.rs  lzw.rs  mod.rs  predictor.rs  runlength.rs
src/editor/: document_editor.rs  dom.rs  form_fields.rs  mod.rs  resource_manager.rs
src/elements/: image.rs  mod.rs  path.rs  table.rs  text.rs
src/encryption/: aes.rs  handler.rs  (+5 more)
tests/: README.md  test_4byte_character_codes.rs  test_actualtext_extraction.rs  test_advanced_cmap_features.rs  test_alice_wonderland.rs  test_annotation_integration.rs  test_cff_font_support.rs  test_character_mapping_fixes.rs  test_cmap_caching.rs  test_compliance.rs  test_converters.rs  test_custom_encoding.rs  test_debug_visualization.rs  test_decoders.rs  test_document_structure.rs  test_dom_api.rs  test_editor.rs  test_editor_form_fields.rs  test_editor_hierarchical_fields.rs  test_editor_modify_properties.rs  test_embedded_files.rs  test_encryption_write.rs  test_fdf_export.rs  test_form_fields.rs  test_foundation.rs  test_hierarchical_integration.rs  test_high_level_api.rs  test_image_embedding.rs  test_images.rs  test_layout.rs  test_lazy_cmap_loading.rs  test_markdown_extraction_quality.rs  test_multibyte_cid_support.rs  test_object_resolution.rs  test_objstm.rs  test_optimized_cmap_parsing.rs  test_outline.rs  test_page_operations.rs  test_path_extraction.rs  test_predefined_cmap_loading.rs  (+10 more)
tools/: diagnose_font_encoding.rs
training/: README.md
(+137 files in other folders)
