[package]
name = "pdf_oxide"
version = "0.2.5"
edition = "2021"
authors = ["Yury Fedoseev <yfedoseev@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Production-grade PDF parsing: spec-compliant text extraction, intelligent reading order, OCR support. Ultra-fast Rust performance."
repository = "https://github.com/yfedoseev/pdf_oxide"
homepage = "https://github.com/yfedoseev/pdf_oxide"
documentation = "https://docs.rs/pdf_oxide"
readme = "README.md"
keywords = ["pdf", "text-extraction", "parser", "ocr", "rag"]
categories = ["parsing", "text-processing"]

[lib]
name = "pdf_oxide"
crate-type = ["cdylib", "rlib"]  # cdylib for Python/WASM, rlib for Rust

[dependencies]
# Core dependencies
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"  # Timestamp generation for benchmark results

# Parsing
nom = "7.1"
regex = "1.10"
lazy_static = "1.4"

# Data structures
bytes = "1.5"
indexmap = "2.2"
byteorder = "1.5"  # For binary parsing (TrueType cmap tables)

# Compression/Decompression
flate2 = "1.0"
weezl = "0.1"  # LZW compression
inflate = "0.4"  # Alternative inflate for better error recovery
libflate = "2.1"  # Another inflate implementation for error recovery

# Font parsing
ttf-parser = "0.24"  # TrueType font parser for embedded font cmap tables
phf = { version = "0.11", features = ["macros"] }  # Perfect hash maps for Adobe Glyph List

# Image processing
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tiff"] }
base64 = "0.22"  # For embedding images as data URIs
tiff = "0.9"  # TIFF support including CCITT decompression
fax = "0.2"   # CCITT Group 3/4 decompression for scanned PDFs (more lenient with malformed EOFB)

# Encryption support
aes = "0.8"          # AES encryption for PDF 1.6+
cbc = "0.1"          # CBC mode for AES
md-5 = "0.10"        # MD5 for key derivation
sha2 = "0.10"        # SHA-256 for newer encryption

# Math and algorithms
ndarray = { version = "0.16", optional = true, features = ["std"] }
linfa = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }

# ML (CPU-only)
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.15", optional = true, default-features = false, features = ["onig"] }

# OCR - PaddleOCR via ONNX Runtime (optional)
ort = { version = "2.0.0-rc.10", optional = true, default-features = false, features = ["ndarray", "download-binaries"] }
imageproc = { version = "0.25", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings (optional)
# Using latest version to support Python 3.14+
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Table detection - page rendering (optional)
pdfium-render = { version = "0.8", optional = true }

lzw = "0.10.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
regex = "1.10"
tempfile = "3.10"

[features]
default = []

# Enable logging for the extraction pipeline
logging = []

# Python bindings (v0.1.0)
python = ["pyo3"]

# The following features are planned for v1.0 and are not yet production-ready.
# We define them here to avoid check-cfg warnings, but their dependencies are commented out.
ml = ["dep:tract-onnx", "dep:ndarray", "dep:linfa", "dep:linfa-clustering", "dep:tokenizers"]
table-ml = ["ml", "dep:pdfium-render"]
ocr = ["dep:ort", "dep:imageproc", "dep:ndarray"]
gpu = ["dep:ort", "ml"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:console_error_panic_hook", "dep:getrandom"]
wasm-ml = ["wasm", "ml"]

# Debug feature for span merging analysis
debug-span-merging = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Size-optimized release (for WASM)
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = true

# Benchmarks
[[bench]]
name = "pdf_extraction_performance"
harness = false

[[bench]]
name = "word_boundary_benchmarks"
harness = false

[[bench]]
name = "script_detection_benchmarks"
harness = false

[[bench]]
name = "ligature_benchmarks"
harness = false

[[bench]]
name = "cjk_benchmarks"
harness = false

[[bench]]
name = "rtl_benchmarks"
harness = false

[[bench]]
name = "complex_script_benchmarks"
harness = false

[[bench]]
name = "full_pipeline_benchmarks"
harness = false

# Cargo auto-discovers binaries in src/bin/

[package.metadata.docs.rs]
# Document with safe features only (tesseract-rs fails on docs.rs sandbox)
features = ["python", "logging", "debug-span-merging"]
rustdoc-args = ["--cfg", "docsrs"]

# Python packaging (Maturin)
[package.metadata.maturin]
name = "pdf_oxide"
python-source = "python"
